# PyStatus

./: .bumpversion.cfg  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  README.rst  pyproject.toml  tasks.py
.github/: ISSUE_TEMPLATE.md
docs/: conf.py  index.rst  installation.rst  usage.rst
pystatus/: __init__.py  pystatus.py  status.py
tests/: __init__.py  test_pystatus.py
