[tool]
[tool.poetry]
name = "pystatus"
version = "0.1.0"
homepage = "https://github.com/chinmayshah99/pystatus"
description = "Top-level package for PyStatus."
authors = ["Chinmay Shah <hi@chinmayshah.xyz>"]
readme = "README.rst"
license =  "Apache-2.0"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
]
packages = [
    { include = "pystatus" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.6"

[tool.poetry.dev-dependencies]
bumpversion = "*"
coverage = "*"
flake8 = "*"
invoke = "*"
isort = "*"
pylint = "*"
pytest = "*"
sphinx = "*"
yapf = "*"
mypy = "*"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
